Enable top-level comparison support for JSON and fix Clob toString handling.